<resources>
    <string name="app_name">StarWarsCharactersActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filters">Filters</string>
    <string name="sort">Sort</string>
    <string name="movies">Movies</string>
    <string name="filter">Filter</string>
    <string name="hair_color">Hair Color</string>
    <string name="eye_color">Eye Color</string>
    <string name="gender">Gender</string>
    <string name="reset">Rest</string>
    <string name="apply">Apply</string>
    <string name="sort_by">Sort by</string>
    <string name="massL2H">Mass : Low to High</string>
    <string name="massH2L">Mass : High to Low</string>
    <string name="heightL2H">Height : Low to High</string>
    <string name="heightH2L">Height : High to Low</string>
    <string name="try_again">Please check network connection and try again</string>
</resources>